# c-client

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  fcserver.json  keys_filt.txt
CAD files/: Acrylic_lazer_cut.dxf
cad/: Nesting Horizontal x 20.DXF  Vertical Nesting.DXF
data/: temp_timelapse.txt  temp_timelapse2.txt
doc/checkpoint/: Checkpoint.tex  includes.tex  titlepage.tex
extension/: README.md
extension/layout/: WorldMap.csv  csv_to_layout.py
extension/src/: Makefile  api.h  apimanager.c  apimanager.h  bare_bones_test.c  client.c  effect.h  effect_runner.c  effect_runner.h  extension.h  fillAll.py  main.c  opc_client.c  opc_client.h  pixel.c  pixel.h  projection.c  projection.h  tcp.c  temp_timelapse2.txt
games/snake/: TKsnake.py  snake.py
openpixel_programs/: tcp.c  test.c
programs/: gpio.s  gpio16_turn_on.s  gpio2.s  gpio22_working.s  gpio3.s  gpioPin10.s  gpio_assert.s  gpio_commented.txt  gpio_notes.txt  gpio_repeat.s  gpio_test.s  gpio_with_pause.s  kernel.img
src/: 2  Makefile  apimanager.c  arm.h  assemble.c  assemble.h  bitops.c  bitops.h  ctrlserver.c  ctrlserver.h  decode.c  decode.h  demo.sh  effect_runner.c  effect_runner.h  emulate.c  emulate.h  emulate.out  encode.h  error.c  error.h  execute.c  execute.h  extension.h  instructions.h  io.c  io.h  map.c  out  parser.c  parser.h  pixel.c  production.sh  projection.h  referencemap.h  register.c  register.h  symbolmap.c  tokenizer.h
src/assemble/: encode.c  encode.h  map.h  parser.c  parser.h  referencemap.c  referencemap.h  symbolmap.c  symbolmap.h  tokenizer.c  tokenizer.h
src/effects/: 1test.c  1test.h  alltest.c  alltest.h  common.c  lasers.c  lasers.h  python.c  python.h  scroller.c  scroller.h  sunrise.c  sunrise.h  test.h  test0.c  test0.h  weather.c  (+1 more)
test/: Makefile
(+132 files in other folders)
